--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "displayName": "carp-vscode",
   "description": "Carp syntax highlighting",
   "version": "0.0.1",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oliverfencott/carp-vscode"
+  },
   "engines": {
     "vscode": "^1.64.0"
   },
