--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "vsce": "^2.6.7"
   },
   "scripts": {
-    "test": "echo 'Write some tests!'",
+    "test": "echo 'Write some tests!' && exit 0",
     "deploy": "vsce publish --yarn"
   }
 }
