--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "carp-vscode",
-  "displayName": "carp-vscode",
+  "displayName": "Carp VS Code",
   "description": "Carp syntax highlighting",
   "publisher": "oliverfencott",
   "version": "0.1.1",
@@ -15,32 +15,26 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [
-      {
-        "id": "carp",
-        "aliases": [
-          "Carp",
-          "carp"
-        ],
-        "extensions": [
-          ".carp"
-        ],
-        "configuration": "./language-configuration.json"
-      }
-    ],
-    "grammars": [
-      {
-        "language": "carp",
-        "scopeName": "source.carp",
-        "path": "./syntaxes/carp.tmLanguage.json"
-      }
-    ],
-    "snippets": [
-      {
-        "language": "carp",
-        "path": "./snippets.json"
-      }
-    ]
+    "languages": [{
+      "id": "carp",
+      "aliases": [
+        "Carp",
+        "carp"
+      ],
+      "extensions": [
+        ".carp"
+      ],
+      "configuration": "./language-configuration.json"
+    }],
+    "grammars": [{
+      "language": "carp",
+      "scopeName": "source.carp",
+      "path": "./syntaxes/carp.tmLanguage.json"
+    }],
+    "snippets": [{
+      "language": "carp",
+      "path": "./snippets.json"
+    }]
   },
   "devDependencies": {
     "vsce": "^2.6.7"
