--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Carp syntax highlighting",
   "publisher": "oliverfencott",
   "version": "0.1.3",
+  "icon": "icon.png",
   "repository": {
     "type": "git",
     "url": "https://github.com/oliverfencott/carp-vscode"
@@ -15,32 +16,26 @@
     "Programming Languages"
   ],
   "contributes": {
-    "languages": [
-      {
-        "id": "carp",
-        "aliases": [
-          "Carp",
-          "carp"
-        ],
-        "extensions": [
-          ".carp"
-        ],
-        "configuration": "./language-configuration.json"
-      }
-    ],
-    "grammars": [
-      {
-        "language": "carp",
-        "scopeName": "source.carp",
-        "path": "./syntaxes/carp.tmLanguage.json"
-      }
-    ],
-    "snippets": [
-      {
-        "language": "carp",
-        "path": "./snippets.json"
-      }
-    ]
+    "languages": [{
+      "id": "carp",
+      "aliases": [
+        "Carp",
+        "carp"
+      ],
+      "extensions": [
+        ".carp"
+      ],
+      "configuration": "./language-configuration.json"
+    }],
+    "grammars": [{
+      "language": "carp",
+      "scopeName": "source.carp",
+      "path": "./syntaxes/carp.tmLanguage.json"
+    }],
+    "snippets": [{
+      "language": "carp",
+      "path": "./snippets.json"
+    }]
   },
   "devDependencies": {
     "vsce": "^2.6.7"
