--- a/package.json
+++ b/package.json
@@ -44,7 +44,9 @@
     ]
   },
   "devDependencies": {
-    "vsce": "^2.6.7"
+    "@types/node": "^17.0.19",
+    "vsce": "^2.6.7",
+    "vscode": "^1.1.37"
   },
   "scripts": {
     "test": "echo 'Write some tests!'",
