--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "Programming Languages"
   ],
   "contributes": {
+    "commands": [
+      {
+        "command": "carp-vscode.helloWorld",
+        "title": "Say Hello"
+      }
+    ],
     "languages": [
       {
         "id": "carp",
@@ -45,10 +51,13 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.19",
+    "@vscode/test-electron": "^2.1.3",
+    "typescript": "^4.6.2",
     "vsce": "^2.6.7",
     "vscode": "^1.1.37"
   },
   "scripts": {
+    "watch": "tsc --watch",
     "test": "echo 'Write some tests!'",
     "deploy": "vsce publish --yarn"
   }
