--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
   "publisher": "oliverfencott",
   "version": "0.1.4",
   "icon": "icon.png",
+  "main": "./out/extension.js",
+  "activationEvents": [
+    "onLanguage:carp"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/oliverfencott/carp-vscode"
@@ -54,7 +58,10 @@
     "@vscode/test-electron": "^2.1.3",
     "typescript": "^4.6.2",
     "vsce": "^2.6.7",
-    "vscode": "^1.1.37"
+    "vscode": "^1.1.37",
+    "vscode-languageclient": "^7.0.0",
+    "vscode-languageserver": "^7.0.0",
+    "vscode-languageserver-textdocument": "^1.0.4"
   },
   "scripts": {
     "watch": "tsc --watch",
